tests/ui/impl-trait/in-trait/dont-consider-unconstrained-rpitits.stderr
error[E0107]: trait takes 0 generic arguments but 1 generic argument was supplied
  --> $DIR/dont-consider-unconstrained-rpitits.rs:9:6
   |
LL | impl Foo<u8> for () {
   |      ^^^---- help: remove the unnecessary generics
   |      |
   |      expected 0 generic arguments
   |
note: trait defined here, with 0 generic parameters
  --> $DIR/dont-consider-unconstrained-rpitits.rs:5:7
   |
LL | trait Foo {
   |       ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0107`.
